2016-10-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp (europeanOptionEngine, americanOptionEngine):
	Correct use of divtimes in case of no high-res. times in QuantLib

2016-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp (europeanOptionEngine, americanOptionEngine):
	Use Nullable<> on dividend parameters, other small rewrites
	* R/options.R: Corresponding changes

2016-10-24  Francois Cocquemas  <hfty@hfty.in>

        * src/vanilla.cpp: Adjust intra-daily part (via patch by Dirk)

2016-10-23  Dirk Eddelbuettel  <edd@debian.org>

        * man/BermudanSwaption.Rd: Add links to SabrSwaption

2016-10-22  Francois Cocquemas  <hfty@hfty.in>

        * R/option.R: Support discrete dividends for European and
        American options
        * src/vanilla.cpp: Ditto
        * man/EuropeanOption.Rd: Documentation update
        * man/AmericanOption.Rd: Ditto
        * tests/RQuantLib.R: Added test

2016-08-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION(Version): Rolled minor version to 0.4.3.1

	* configure.ac: Require at least QuantLib 1.8
	* configire: Rebuilt

	* NAMESPACE: Also import zoo from zoo
	* man/FittedBondCurve.Rd: No longer need to test for (imported) zoo

2016-08-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.4.3

	* DESCRIPTION (OS_type): Set to 'OS_type: unix' as CRAN has not
	installed an updated QuantLib library despite repeated emailed offers
	offer several months.  A Windows binary will be provided.

	* configure.ac: Mark as 0.4.3
	* configure: Rebuilt

	* README.md: Add Terry to Authors, add Installation note, add link
	to Contributing document

2016-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): Check for quantlib-config before using it

2016-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Roll minor version

	* data/tsQuotes.RData: More explicit name and loading
	* data/vcube.Rdata: Idem

	* R/datasets.R: Dataset documentation